--- a/soal.html
+++ b/soal.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soal Pemrograman</title>
+    <script>
+      const userId = localStorage.getItem("userId");
+      const terkunci = localStorage.getItem("aksesSoalTerkunci") === "true";
+      const dibukaAdmin = localStorage.getItem("overrideAksesSoal") === "true";
+
+      // Jika sudah terkunci dan tidak ada override, redirect ke leaderboard
+      if (terkunci && !dibukaAdmin && userId !== "satrio-1234") {
+        window.location.href = "leaderboard.html";
+      }
+    </script>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css"
@@ -11,201 +22,267 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        background: linear-gradient(to right, #f3f4f6, #e5e7eb);
         margin: 0;
+        background: linear-gradient(to right, #eef2f3, #8e9eab);
       }
       header {
-        background: #1e3a8a;
+        background-color: #2c3e50;
         color: white;
-        padding: 20px;
+        padding: 15px;
         text-align: center;
         position: relative;
       }
       #timer {
         position: absolute;
         right: 20px;
-        top: 20px;
-        font-weight: bold;
+        top: 15px;
         background: rgba(255, 255, 255, 0.2);
-        padding: 10px;
-        border-radius: 10px;
+        padding: 8px 15px;
+        border-radius: 20px;
+        font-weight: bold;
       }
       .container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
         padding: 20px;
       }
-      .question-box {
+      .editor-section {
         background: white;
+        padding: 15px;
         border-radius: 10px;
-        padding: 20px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        margin-bottom: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
-      textarea,
-      select {
+      .editor-section h3 {
+        margin-top: 0;
+      }
+      iframe {
         width: 100%;
-        padding: 10px;
-        margin-top: 10px;
-        font-family: monospace;
+        height: 300px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background: white;
       }
       button {
-        margin-top: 15px;
         padding: 10px 20px;
-        background: #4caf50;
+        background: linear-gradient(to right, #4facfe, #00f2fe);
         color: white;
         border: none;
-        border-radius: 5px;
+        border-radius: 25px;
         cursor: pointer;
+        font-weight: bold;
+        transition: background 0.3s;
+        margin-right: 10px;
       }
-      button:disabled {
-        background: grey;
+      button:hover {
+        background: linear-gradient(to right, #43e97b, #38f9d7);
       }
       #score {
         font-weight: bold;
-        margin-top: 10px;
+        margin-left: 20px;
+      }
+      .controls {
+        margin-bottom: 15px;
       }
     </style>
   </head>
   <body>
     <header>
-      <h1>Soal Pemrograman Web</h1>
-      <div id="timer">Timer</div>
+      <h2 id="judulSoal">Soal Codingan</h2>
+      <div id="timer">Loading timer...</div>
     </header>
     <div class="container">
-      <div class="question-box" id="questionBox">
-        <!-- Soal akan dimuat di sini -->
+      <div class="controls">
+        <button onclick="compileCode()">Compile</button>
+        <button onclick="nextSoal()">Next</button>
+        <span id="score">Score: 0</span>
       </div>
-      <div id="score">Skor: 0</div>
-      <button id="nextBtn" onclick="nextSoal()" disabled>Next</button>
+      <p id="deskripsiSoal">Deskripsi soal akan ditampilkan di sini.</p>
+      <div class="editor-section">
+        <h3>HTML</h3>
+        <textarea id="htmlEditor"></textarea>
+      </div>
+      <div class="editor-section">
+        <h3>CSS</h3>
+        <textarea id="cssEditor"></textarea>
+      </div>
+      <div class="editor-section">
+        <h3>JavaScript</h3>
+        <textarea id="jsEditor"></textarea>
+      </div>
+      <div class="editor-section">
+        <h3>Preview</h3>
+        <iframe id="preview"></iframe>
+      </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/xml/xml.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/css/css.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
+
     <script>
-      const soalSet = [
-        // Soal dummy awal. Nanti bisa diganti/generate secara dinamis
+      const htmlEditor = CodeMirror.fromTextArea(
+        document.getElementById("htmlEditor"),
         {
-          type: "code",
-          question:
-            "Tampilkan teks 'Halo Dunia!' dalam heading H1 berwarna merah.",
-          htmlAnswer: "<h1>Halo Dunia!</h1>",
-          cssAnswer: "h1 { color: red; }",
-        },
+          mode: "xml",
+          lineNumbers: true,
+        }
+      );
+      const cssEditor = CodeMirror.fromTextArea(
+        document.getElementById("cssEditor"),
         {
-          type: "mc",
-          question: "Apa tag HTML untuk paragraf?",
-          options: ["<p>", "<div>", "<span>", "<h1>"],
-          correct: "<p>",
-        },
-      ];
+          mode: "css",
+          lineNumbers: true,
+        }
+      );
+      const jsEditor = CodeMirror.fromTextArea(
+        document.getElementById("jsEditor"),
+        {
+          mode: "javascript",
+          lineNumbers: true,
+        }
+      );
 
-      let current = 0;
-      let score = 0;
-      const maxSoal = 10;
+      function generateRandomSoal(count = 10) {
+        const tags = ["div", "p", "h1", "h2", "button", "ul", "li"];
+        const colors = ["red", "blue", "green", "orange", "purple"];
+        const texts = [
+          "Halo Dunia",
+          "Klik Saya",
+          "Selamat Datang",
+          "Paragraf Baru",
+        ];
 
-      function renderSoal() {
-        const soal = soalSet[current];
-        const box = document.getElementById("questionBox");
-        box.innerHTML = `<p><strong>Soal ${current + 1}:</strong> ${
-          soal.question
-        }</p>`;
+        const hasil = [];
+        for (let i = 0; i < count; i++) {
+          const tag = tags[Math.floor(Math.random() * tags.length)];
+          const warna = colors[Math.floor(Math.random() * colors.length)];
+          const teks = texts[Math.floor(Math.random() * texts.length)];
 
-        if (soal.type === "code") {
-          box.innerHTML += `
-          <label>HTML:</label>
-          <textarea id="htmlInput"></textarea>
-          <label>CSS:</label>
-          <textarea id="cssInput"></textarea>
-          <button onclick="cekJawaban()">Cek Jawaban</button>
-        `;
-        } else if (soal.type === "mc") {
-          soal.options.forEach((opt) => {
-            const btn = document.createElement("button");
-            btn.textContent = opt;
-            btn.onclick = () => cekJawabanMC(opt);
-            btn.style.margin = "5px";
-            btn.style.display = "inline-block";
-            box.appendChild(btn);
+          hasil.push({
+            id: i + 1,
+            deskripsi: `Buat tag <${tag}> dengan teks "${teks}" dan beri warna ${warna}.`,
+            tag: tag,
+            teks: teks,
+            warna: warna,
           });
         }
+        return hasil;
       }
 
-      function cekJawaban() {
-        const html = document
-          .getElementById("htmlInput")
-          .value.replace(/\s/g, "");
-        const css = document
-          .getElementById("cssInput")
-          .value.replace(/\s/g, "");
-        const jawabHtml = soalSet[current].htmlAnswer.replace(/\s/g, "");
-        const jawabCss = soalSet[current].cssAnswer.replace(/\s/g, "");
+      const soalData = generateRandomSoal(10);
+      let skor = parseInt(localStorage.getItem("skor")) || 0;
+      let soalIndex = parseInt(localStorage.getItem("soalIndex")) || 0;
+      let jawabanTerkunci =
+        JSON.parse(localStorage.getItem("jawabanTerkunci")) || [];
 
-        if (html === jawabHtml && css === jawabCss) {
-          score += 100;
-          document.getElementById("score").textContent = "Skor: " + score;
-          document.getElementById("nextBtn").disabled = false;
-        } else {
-          alert("Jawaban belum tepat.");
-        }
+      function tampilkanSoal() {
+        const soal = soalData[soalIndex];
+        document.getElementById("judulSoal").textContent = `Soal ${
+          soalIndex + 1
+        }`;
+        document.getElementById("deskripsiSoal").textContent = soal.deskripsi;
+        htmlEditor.setValue("");
+        cssEditor.setValue("");
+        jsEditor.setValue("");
+        document.getElementById("score").textContent = `Score: ${skor}`;
       }
 
-      function cekJawabanMC(opt) {
-        const benar = soalSet[current].correct;
-        if (opt === benar) {
-          score += 100;
-          document.getElementById("score").textContent = "Skor: " + score;
-          document.getElementById("nextBtn").disabled = false;
-        } else {
-          alert("Salah, coba lagi!");
+      function compileCode() {
+        if (jawabanTerkunci.includes(soalIndex)) return;
+
+        const html = htmlEditor.getValue().replace(/\s/g, "").toLowerCase();
+        const css = cssEditor.getValue().replace(/\s/g, "").toLowerCase();
+        const js = jsEditor.getValue();
+        const soal = soalData[soalIndex];
+
+        const preview = document.getElementById("preview");
+        preview.srcdoc = `<style>${cssEditor.getValue()}</style>${html}<script>${js}<\/script>`;
+
+        const expectedHtml = `<${soal.tag}>${soal.teks}</${soal.tag}>`
+          .replace(/\s/g, "")
+          .toLowerCase();
+        const expectedCss = `${soal.tag}{color:${soal.warna};}`
+          .replace(/\s/g, "")
+          .toLowerCase();
+
+        if (html.includes(expectedHtml) && css.includes(expectedCss)) {
+          skor += 100;
+          jawabanTerkunci.push(soalIndex);
+          localStorage.setItem("skor", skor);
+          localStorage.setItem(
+            "jawabanTerkunci",
+            JSON.stringify(jawabanTerkunci)
+          );
+          document.getElementById("score").textContent = `Score: ${skor}`;
         }
       }
 
       function nextSoal() {
-        current++;
-        if (current < maxSoal) {
-          renderSoal();
-          document.getElementById("nextBtn").disabled = true;
+        soalIndex++;
+
+        if (soalIndex >= soalData.length) {
+          alert("Selesai! Skor akhir: " + skor);
+
+          const waktuSelesai = Date.now();
+          const waktuMulai =
+            parseInt(localStorage.getItem("waktuMulai")) || waktuSelesai;
+
+          const riwayat = JSON.parse(localStorage.getItem("riwayatSkor")) || [];
+          const id = localStorage.getItem("userId");
+          riwayat.push({ id, skor, waktuMulai, waktuSelesai });
+          localStorage.setItem("riwayatSkor", JSON.stringify(riwayat));
+
+          // Kunci akses soal dan HAPUS override jika ada
+          localStorage.setItem("aksesSoalTerkunci", "true");
+          localStorage.removeItem("overrideAksesSoal");
+          localStorage.removeItem("skor");
+          localStorage.removeItem("soalIndex");
+          localStorage.removeItem("jawabanTerkunci");
+
+          window.location.href = "leaderboard.html";
         } else {
-          const lanjut = confirm(
-            "Kamu sudah menyelesaikan 10 soal. Ingin lanjut 10 soal lagi?"
-          );
-          if (lanjut) {
-            // Tambah soal lagi secara dinamis di sini (misalnya dari AI/API)
-            alert("Soal tambahan disiapkan oleh sistem.");
-            current = 0;
-            score = 0;
-            renderSoal();
-          } else {
-            window.location.href = "login.html";
-          }
+          localStorage.setItem("soalIndex", soalIndex);
+          tampilkanSoal();
         }
       }
 
-      function startCountdown() {
-        const now = new Date();
-        const tomorrow = new Date();
-        tomorrow.setDate(now.getDate() + 1);
-        tomorrow.setHours(12, 0, 0, 0);
-        const endTime = tomorrow.getTime();
+      window.onload = () => {
+        tampilkanSoal();
+        startTimer();
+        localStorage.setItem(
+          "waktuMulai",
+          localStorage.getItem("waktuMulai") || Date.now()
+        );
+      };
 
-        const interval = setInterval(() => {
-          const diff = endTime - Date.now();
-          if (diff <= 0) {
-            clearInterval(interval);
-            alert("Waktu habis!");
-            window.location.href = "login.html";
+      function startTimer() {
+        const batasWaktu = new Date();
+        // Jika sekarang sudah lewat jam 18.00, set ke besok
+        if (batasWaktu.getHours() >= 18) {
+          batasWaktu.setDate(batasWaktu.getDate() + 1);
+        }
+        // Set ke jam 18.00 (6 sore)
+        batasWaktu.setHours(18, 0, 0, 0);
+
+        setInterval(() => {
+          const sisa = batasWaktu - new Date();
+          if (sisa <= 0) {
+            document.getElementById("timer").textContent = "Waktu Habis!";
+            alert("Waktu kuis telah habis!");
+            window.location.href = "leaderboard.html";
             return;
           }
-          const hours = Math.floor(diff / (1000 * 60 * 60));
-          const minutes = Math.floor((diff / (1000 * 60)) % 60);
-          const seconds = Math.floor((diff / 1000) % 60);
+
+          const jam = Math.floor(sisa / (1000 * 60 * 60));
+          const menit = Math.floor((sisa % (1000 * 60 * 60)) / (1000 * 60));
+          const detik = Math.floor((sisa % (1000 * 60)) / 1000);
           document.getElementById(
             "timer"
-          ).textContent = `${hours}j ${minutes}m ${seconds}d`;
+          ).textContent = `${jam}j ${menit}m ${detik}d`;
         }, 1000);
       }
-
-      window.onload = () => {
-        renderSoal();
-        startCountdown();
-      };
     </script>
   </body>
 </html>
